# ayati-a1

./: .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
agent-notes/: README.md
agent-notes/external-task-resource-bindings-2026-07-17/: README.md  architecture.md  conversation.md  decisions.md  implementation.md  lifecycle.md  problem.md  progress.md  resource-model.md  storage-and-recovery.md  testing.md
agent-notes/future-plans/: README.md  artifact-match-precision.md  task-state-memory-cleanup.md
agent-notes/git-context-engine-service-migration-2026-07-12/: README.md  architecture.md  conversation.md  decisions.md  (+5 more)
agent-plans/: README.md
ayati-cli/: package-lock.json  package.json  tsconfig.json
ayati-context-engine/: README.md  package.json  tsconfig.json
ayati-git-context/: README.md  package.json
ayati-learning-ui/: index.html  package.json  tsconfig.json  vite.config.ts
ayati-learning-ui/src-tauri/: Cargo.toml  tauri.conf.json
ayati-learning-ui/src-tauri/capabilities/: default.json
ayati-learning-ui/src-tauri/src/: lib.rs  main.rs
ayati-main/: .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  execution.md  package-lock.json  package.json  plan.md  result.md  story_outline.txt  system_health_report.txt  tsconfig.json  user_profile.html  workspace-preference-plan.md
ayati-web/: AGENTS.md  package-lock.json  package.json
project-docs/: README.md
scripts/: clean-dist.mjs  context-archive-reset.mjs  context-catalog-rebuild.mjs  context-engine-feedback-report.mjs  eval-agent.mjs  git-context-feedback-report.mjs
(+1312 files in other folders)
