[package]
name = "ayati-learning-ui"
version = "0.1.0"
description = "Ayati visual learning workspace"
authors = ["Ayati"]
edition = "2021"

[lib]
name = "ayati_learning_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
